--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb://mongo:OyVwaRbfDerAgCJmnZDhNuRsNSxSCOOW@ballast.proxy.rlwy.net:54354
+MONGODB_URL=mongodb+srv://toanpmo123:zISX6iOWCPKIp1Gq@getstk.58xvcf2.mongodb.net/?ssl=true&tlsAllowInvalidCertificates=true&retryWrites=true&w=majority&ssl_cert_reqs=CERT_NONE
 PORT=3000
