--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://toanpmo123:zISX6iOWCPKIp1Gq@getstk.58xvcf2.mongodb.net/
+MONGODB_URL=mongodb+srv://toanpmo123:JezZWGHbaj2Ul3hU@cluster0.akmycy5.mongodb.net/
 PORT=3000
